--- a/shoe_brand/css/style.css
+++ b/shoe_brand/css/style.css
@@ -2,7 +2,7 @@
 
 html {
 
-    margin: 1rem 5rem 5rem;
+    margin: 1rem;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
@@ -66,6 +66,7 @@ li {
 .menu {
     position: absolute;
     padding: 1rem;
+    right: 0.1rem;
     top: 1rem;
     height: 1.3rem;
 }
@@ -100,14 +101,14 @@ main {
 }
 
 img {
-    height: 11em;
+    height: 16em;
     width: 100%;
     object-fit: cover;
 
 }
 
 .text {
-    font-size: 20px;
+    font-size: 15px;
 }
 
 
@@ -146,6 +147,7 @@ img {
 
     ul {
         display: flex;
+        padding: 0;
     }
 
     main {
@@ -158,7 +160,7 @@ img {
 
     .text {
         font-size: 14px;
-        margin-top: 1rem;
+        margin-top: 2rem;
         margin-left: 30%;
         text-align: right;
     }
